--- a/main.css
+++ b/main.css
@@ -7,22 +7,22 @@ body {
     font-family: Tahoma, Arial;
 }
 
-div.menu {
+nav.menu {
     width: 100%;
     background-color: #4d5791;
     height: 44px;
     padding: 0 40px;
 }
 
-div.menu ul,
-div.menu ul li {
+nav.menu ul,
+nav.menu ul li {
     margin: 0;
     padding: 0 ;
     list-style: none;
     display: inline-block;
 }
 
-div.menu ul li a {
+nav.menu ul li a {
     display: block;
     padding: 0 20px;
     line-height: 44px;
@@ -32,12 +32,12 @@ div.menu ul li a {
     margin: 0;
 }
 
-div.menu ul li a:hover  {
+nav.menu ul li a:hover  {
     background-color: white;
     color: #4d5791;
 }
 
-div.hero {
+section.hero {
     height: 350px;
     background-color: #b4c6f0;
     background-image: url('./bg.png');
@@ -47,30 +47,34 @@ div.hero {
     padding-top: 40px;
 }
 
-div.hero h1,
-div.hero h2 {
+section.hero h1,
+section.hero h2 {
     text-align: center;
     margin: 0;
 }
 
-div.hero h1 {
+section.hero h1 {
     color: #fff;
     font-size: 4.2em;
     margin-bottom: 20px;
 }
 
-div.hero h2 {
+section.hero h2 {
     color: #4d5791;
 }
 
 .container {
     padding: 40px;
     width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 .page-area {
     max-width: 768px;
-    display: inline-block;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
 }
 
 .bottom {
@@ -83,8 +87,9 @@ div.hero h2 {
     text-align: center;
 }
 
-.container div.text-box {
-    display: inline-block;
+.container article.text-box {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     max-width: 340px;
     text-align: justify;
@@ -92,7 +97,14 @@ div.hero h2 {
 }
 
 @media screen and (min-width: 768px) {
-    .container .div.text-box {
+    .container article.text-box {
         margin: 10px;
     }
+}
+
+.hidden-visibility{
+    position: absolute;
+    height: 0;
+    width: 0;
+    left: -1000px;
 }
